--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,41 @@
-asgiref==3.9.1
-Django==5.2.5
+asgiref==3.8.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+beautifulsoup4==4.13.4
+bs4==0.0.2
+certifi==2025.8.3
+cffi==1.17.1
+channels==4.2.2
+charset-normalizer==3.4.3
+constantly==23.10.4
+crypto==1.4.1
+cryptography==44.0.3
+daphne==4.1.2
+Django==5.2
 django-cors-headers==4.7.0
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
+djangorestframework==3.16.0
 environ==1.0
-PyJWT==2.10.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+Naked==0.1.32
+numpy==2.2.5
+opencv-python==4.11.0.86
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pyOpenSSL==25.0.0
+PyYAML==6.0.2
+requests==2.32.4
+service-identity==24.2.0
+setuptools==80.3.1
+shellescape==3.8.1
+soupsieve==2.7
 sqlparse==0.5.3
+Twisted==24.11.0
+txaio==23.1.1
+typing_extensions==4.13.2
 tzdata==2025.2
+urllib3==2.5.0
+zope.interface==7.2
